# rdp-limited-edition

./: CHANGELOG.md  README.md  pyproject.toml
changes/: +0e1abe98.feature.md  +1c8c720c.doc.md  +3eb91ba9.bugfix.md  +4cedf088.feature.md  +7f4f79e4.feature.md  +93fc4640.feature.md  +974a6f1b.doc.md  +be468335.feature.md  +c6c2e0c0.doc.md  +ec94703a.feature.md
src/: demo.py
src/rdp_limited_edition/: __about__.py  rdp.py
tests/: __init__.py
